--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/db_dev
-spring.datasource.username=root
-spring.datasource.password=docker
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+# Enabling H2 Console
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.data.jpa.repositories.bootstrap-mode=default
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
