--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
   id 'org.springframework.boot' version '2.4.3'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'java'
+  id 'groovy'
 }
 
 group = 'cz.upce'
@@ -16,6 +17,7 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
   implementation 'org.springframework.boot:spring-boot-starter-web'
+  testImplementation 'org.codehaus.groovy:groovy'
   runtimeOnly 'com.h2database:h2'
   developmentOnly 'org.springframework.boot:spring-boot-devtools'
   runtimeOnly 'mysql:mysql-connector-java'
