--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
 
   testImplementation 'junit:junit:4.12'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
+  testCompile 'commons-beanutils:commons-beanutils:1.9.4'
+  testCompile 'org.apache.commons:commons-lang3:3.12.0'
 }
 
 test {
