--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testCompile 'commons-beanutils:commons-beanutils:1.9.4'
   testCompile 'org.apache.commons:commons-lang3:3.12.0'
+  testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+
 }
 
 test {
